# cindergrace_ki-cli_workspace

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  cli.py  pyproject.toml  start.sh
.github/workflows/: test.yml
addons/: __init__.py
core/: __init__.py  ai_commit.py  ai_delegation.py  checks.py  cli.py  codacy_sync.py  crypto.py  database.py  github_api.py  mcp_sync.py  project_init.py  project_tools.py  secrets.py
core/check_plugins/: __init__.py  base.py
core/check_plugins/builtin/: __init__.py  changelog.py  code_quality.py  git.py  gradio.py  issues.py  license.py  readme.py  tests.py
core/check_plugins/custom/: __init__.py
data/licenses/: CC_BY_NC_4.txt
docs/: ARCHITECTURE_v2.md  ARCHITECTURE_v2_REVIEW.md
tests/: __init__.py  test_crypto.py  test_database.py  test_github_api.py
