[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cindergrace-ki-cli-workspace"
version = "0.1.0"
description = "KI-CLI übergreifendes Workspace-Tool für Issue-Management und Prozessdokumentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.31.0",
    "requests>=2.32.0",
]

[tool.setuptools.packages.find]
include = ["core*", "addons*"]
exclude = ["data*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
