[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cindergrace-ki-cli-workspace"
version = "0.1.0"
description = "KI-CLI übergreifendes Workspace-Tool für Issue-Management und Prozessdokumentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.31.0",
    "requests>=2.32.0",
    "cryptography>=44.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
ki-workspace = "core.cli:app"

[tool.setuptools.packages.find]
include = ["core*", "addons*"]
exclude = ["data*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "radon>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
